4th week in 2nd term done

--- a/Yandex pythod DS/2 term/2/sklearn.cross_validation.ipynb
+++ b/Yandex pythod DS/2 term/2/sklearn.cross_validation.ipynb
@@ -50,9 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cross_validation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-bc475a1b8c13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m train_data, test_data, train_labels, test_labels = cross_validation.train_test_split(iris.data, iris.target, \n\u001b[0m\u001b[1;32m      2\u001b[0m                                                                                      test_size = 0.3)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cross_validation' is not defined"
+     ]
+    }
+   ],
    "source": [
     "train_data, test_data, train_labels, test_labels = cross_validation.train_test_split(iris.data, iris.target, \n",
     "                                                                                     test_size = 0.3)"
@@ -336,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
