changes in the 2 last answ

--- a/Yandex pythod DS/4 term/2_week_metrics/2nd_quiz/Untitled.ipynb
+++ b/Yandex pythod DS/4 term/2_week_metrics/2nd_quiz/Untitled.ipynb
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1010051669482079\n"
+      "0.05050258347410395\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
     "\n",
     "z = mu1 - mu\n",
     "norm_dist = scipy.stats.norm(0, (S)/np.sqrt(n1))\n",
-    "print(2 * norm_dist.cdf(-z))"
+    "print(norm_dist.cdf(-z))"
    ]
   },
   {
@@ -452,14 +452,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0989429360672962\n"
+      "0.0494714680336481\n"
      ]
     }
    ],
@@ -473,7 +473,7 @@
     "\n",
     "z = mu1 - mu\n",
     "norm_dist = scipy.stats.norm(0, (S)/np.sqrt(n1))\n",
-    "print(2 * norm_dist.cdf(-z))"
+    "print(norm_dist.cdf(-z))"
    ]
   },
   {
@@ -493,9 +493,9 @@
     "\n",
     "5:0.0599 +\n",
     "\n",
-    "6: 0.1010\n",
+    "6: 0.0505 +\n",
     "\n",
-    "7:0.0989"
+    "7:0.04947 +"
    ]
   }
  ],
