--- a/IBM_AI/Capstone_Project/3.1_linearclassiferPytorch.ipynb
+++ b/IBM_AI/Capstone_Project/3.1_linearclassiferPytorch.ipynb
@@ -584,9 +584,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_i",
+   "display_name": "venv_ibm",
    "language": "python",
-   "name": "venv_i"
+   "name": "venv_ibm"
   },
   "language_info": {
    "codemirror_mode": {
